Fix the issue where some widgets at the corners are covered

--- a/src/components/Widgets/Widgets.module.css
+++ b/src/components/Widgets/Widgets.module.css
@@ -101,6 +101,7 @@
   left: 0;
   right: 0;
   margin: 0 auto;
+  width: fit-content;
 }
 
 .topRight {
@@ -128,6 +129,7 @@
   left: 0;
   right: 0;
   margin: 0 auto;
+  width: fit-content;
 }
 
 .bottomRight {
